--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Animal Sound</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Animal Sound</h1>
 
     <h3>Click the image or press key</h3>
 
     <div>
-        <img class="l animal" src="assets/images/lion.jpg" alt="">
-        <img class="e animal" src="assets/images/elephant.jpeg" alt="">
-        <img class="m animal" src="assets/images/monkey.jpeg" alt="">
-        <img class="c animal" src="assets/images/cat.jpg" alt="">
-        <img class="b animal" src="assets/images/eagle.jpeg" alt="">
+      <div>
+        <button class="l animal">l</button>
+        <button class="e animal">e</button>
+        <button class="m animal">m</button>
+        <button class="c animal">c</button>
+        <button class="b animal">b</button>
     </div>
-</body>
+
+    <script src="index.js"></script>
+  </body>
 </html>
